include/moonlitt.h

/**
 * Opaque engine handle exposed to C callers.
 */
typedef struct EngineHandle EngineHandle;
/**
 * Opaque runtime handle exposed to C callers.
 */
typedef struct RuntimeHandle RuntimeHandle;
/**
 * Status code returned by fallible moonlitt functions.
 * `0` = success; negative values classify the failure.
 */
typedef int32_t MoonlittStatus;
/**
 * Human-readable detail of the most recent failure on the calling
 * thread, or NULL if nothing failed yet.
 *
 * Ownership: borrowed from the library — do NOT free. Valid on the
 * calling thread until the next failing moonlitt call. Only meaningful
 * immediately after a call returned non-OK / NULL.
 */
const char *moonlitt_last_error_message(void);
/**
 * Packed ABI version: `(major << 16) | (minor << 8) | patch`.
 *
 * Bindings should check this at load time and refuse to run against an
 * incompatible major version.
 */
uint32_t moonlitt_abi_version(void);
/**
 * Create a new engine handle with no backend loaded.
 *
 * * `sample_rate` — Hz, must be > 0 (typical: 44100 or 48000)
 * * `buffer_size` — frames per render block, must be > 0 (typical: 256)
 *
 * Returns an owned opaque pointer (free with `moonlitt_engine_destroy`),
 * or NULL with a last-error message if the configuration is invalid.
 */
struct EngineHandle *moonlitt_engine_create(int sample_rate, int buffer_size);
/**
 * Destroy an engine handle and its backend. Safe to call with NULL.
 * After this the pointer is dangling — do not use it again.
 */
void moonlitt_engine_destroy(struct EngineHandle *e);
/**
 * Load a plugin or soundfont; the format is detected from the file
 * extension (`.sf2` / `.vst3` / `.clap`). Replaces any backend that was
 * already loaded.
 *
 * Returns `MOONLITT_OK`, `MOONLITT_ERR_INVALID_ARG` (NULL handle/path),
 * `MOONLITT_ERR_IO` (file missing/unreadable) or `MOONLITT_ERR_PLUGIN`
 * (the file exists but the backend failed to initialise).
 */
MoonlittStatus moonlitt_engine_load(struct EngineHandle *e, const char *path);
/**
 * Drop the loaded backend (if any). Safe on NULL and on an engine with
 * nothing loaded; never fails.
 */
void moonlitt_engine_unload(struct EngineHandle *e);
/**
 * Returns 1 if a backend is loaded, 0 otherwise (including NULL handle).
 */
int moonlitt_engine_is_loaded(struct EngineHandle *e);
/**
 * Start a note.
 *
 * * `ch`   — MIDI channel, 0..=15
 * * `note` — MIDI note number, 0..=127 (60 = middle C)
 * * `vel`  — velocity, 0..=127 (0 is interpreted as note-off by MIDI
 *   convention; backends follow it)
 */
MoonlittStatus moonlitt_engine_note_on(struct EngineHandle *e, int ch, int note, int vel);
/**
 * Release a note. `ch` 0..=15, `note` 0..=127.
 */
MoonlittStatus moonlitt_engine_note_off(struct EngineHandle *e, int ch, int note);
/**
 * Send a MIDI control change. `ch` 0..=15, `cc` 0..=127, `val` 0..=127.
 * Common controllers: 1 = mod wheel, 7 = volume, 11 = expression,
 * 64 = sustain pedal.
 */
MoonlittStatus moonlitt_engine_cc(struct EngineHandle *e, int ch, int cc, int val);
/**
 * Send a pitch-bend. `ch` 0..=15, `val` -8192..=8191 (0 = centre).
 */
MoonlittStatus moonlitt_engine_pitch_bend(struct EngineHandle *e, int ch, int val);
/**
 * Switch program/patch on a channel. `ch` 0..=15, `prog` 0..=127.
 * For VST3 sampler-style plugins prefer `moonlitt_engine_load_preset`.
 */
MoonlittStatus moonlitt_engine_program_change(struct EngineHandle *e, int ch, int prog);
/**
 * Release every sounding note on every channel.
 */
MoonlittStatus moonlitt_engine_all_notes_off(struct EngineHandle *e);
/**
 * Render `frames` samples of audio into the caller's `left`/`right`
 * buffers (each must hold at least `frames` f32 values — the library
 * cannot verify this).
 *
 * With no backend loaded the buffers are filled with silence and
 * `MOONLITT_ERR_NOT_LOADED` is returned, so a lazy caller still gets
 * valid audio while an attentive one can detect the missing load.
 */
MoonlittStatus moonlitt_engine_render(struct EngineHandle *e,
                                      float *left,
                                      float *right,
                                      int frames);
/**
 * Set the backend's output volume. `volume` is linear gain (1.0 =
 * unity); NaN is rejected.
 */
MoonlittStatus moonlitt_engine_set_volume(struct EngineHandle *e, float volume);
/**
 * Scan the system plugin directories. Returns a JSON array
 * `[{"name","path","format"}, …]`.
 *
 * Ownership: the returned string is owned by the caller — free it with
 * `moonlitt_free_string`. Returns NULL on NULL handle.
 */
char *moonlitt_engine_scan_plugins(struct EngineHandle *e);
/**
 * List the loaded backend's presets as JSON `[{"id","name"}, …]`.
 * An empty list (`[]`) means the backend exposes no presets.
 *
 * Ownership: caller frees with `moonlitt_free_string`. Returns NULL
 * (with NOT_LOADED / INVALID_ARG detail) when no backend is loaded.
 */
char *moonlitt_engine_get_presets(struct EngineHandle *e);
/**
 * Load a preset by the id reported in `moonlitt_engine_get_presets`.
 */
MoonlittStatus moonlitt_engine_load_preset(struct EngineHandle *e, int id);
/**
 * Create a live-audio runtime from an engine handle.
 *
 * **Ownership**: the backend is consumed out of `engine_handle` only on
 * success. On failure (e.g. no audio output device) the backend is put
 * back, so the caller may retry or keep using the engine offline. The
 * (now empty) engine handle must still be destroyed eventually.
 *
 * Returns NULL + last-error on failure.
 */
struct RuntimeHandle *moonlitt_runtime_create(struct EngineHandle *engine_handle);
/**
 * Destroy a runtime handle: stops audio output and frees resources.
 * Safe to call with NULL.
 */
void moonlitt_runtime_destroy(struct RuntimeHandle *rt);
/**
 * Start the audio output stream (begin calling the audio device).
 */
MoonlittStatus moonlitt_runtime_start_audio(struct RuntimeHandle *rt);
/**
 * Pause the audio output stream (the device callback stops firing).
 */
MoonlittStatus moonlitt_runtime_stop_audio(struct RuntimeHandle *rt);
/**
 * Start a note. `ch` 0..=15, `note` 0..=127, `vel` 0..=127.
 */
MoonlittStatus moonlitt_runtime_note_on(struct RuntimeHandle *rt, int ch, int note, int vel);
/**
 * Release a note. `ch` 0..=15, `note` 0..=127.
 */
MoonlittStatus moonlitt_runtime_note_off(struct RuntimeHandle *rt, int ch, int note);
/**
 * Send a MIDI control change. `ch` 0..=15, `cc` 0..=127, `val` 0..=127.
 * Common controllers: 1 = mod wheel, 7 = volume, 11 = expression,
 * 64 = sustain pedal.
 */
MoonlittStatus moonlitt_runtime_cc(struct RuntimeHandle *rt, int ch, int cc, int val);
/**
 * Send a pitch-bend. `ch` 0..=15, `val` -8192..=8191 (0 = centre).
 */
MoonlittStatus moonlitt_runtime_pitch_bend(struct RuntimeHandle *rt, int ch, int val);
/**
 * Release every sounding note on every channel.
 */
MoonlittStatus moonlitt_runtime_all_notes_off(struct RuntimeHandle *rt);
/**
 * Set the source backend's output volume (linear gain, 1.0 = unity).
 */
MoonlittStatus moonlitt_runtime_set_volume(struct RuntimeHandle *rt, float volume);
/**
 * List available MIDI input devices as JSON `[{"id","name"}, …]`.
 *
 * Ownership: caller frees with `moonlitt_free_string`. Returns NULL +
 * last-error when the MIDI subsystem is unavailable.
 */
char *moonlitt_runtime_list_midi_inputs(void);
/**
 * Start sequencer playback from the current position.
 */
MoonlittStatus moonlitt_runtime_play(struct RuntimeHandle *rt);
/**
 * Pause sequencer playback, keeping the position.
 */
MoonlittStatus moonlitt_runtime_pause(struct RuntimeHandle *rt);
/**
 * Stop sequencer playback and rewind to the start.
 * (The audio stream itself is controlled by
 * `moonlitt_runtime_start_audio` / `moonlitt_runtime_stop_audio`.)
 */
MoonlittStatus moonlitt_runtime_stop(struct RuntimeHandle *rt);
/**
 * Free a string previously returned by any `moonlitt_*` function that
 * documents "caller must free with `moonlitt_free_string`".
 */
void moonlitt_free_string(char *s);